[gd_scene load_steps=2 format=3 uid="uid://csxclroyw8kx4"]

[ext_resource type="Script" uid="uid://b1i3mbf6hc5wr" path="res://scripts/ui/HUD.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
offset_left = 16.0
offset_top = 16.0
theme_override_constants/separation = 12

[node name="TurnLabel" type="Label" parent="HBox"]
layout_mode = 2

[node name="PhaseLabel" type="Label" parent="HBox"]
layout_mode = 2
text = "Phase: —"

[node name="DecayQueueLabel" type="Label" parent="HBox"]
layout_mode = 2
text = "Decay Battles 0/0 (pending 0)"

[node name="SproutHpLabel" type="Label" parent="HBox"]
layout_mode = 2
text = "Sprout HP: —"

[node name="Spacer" type="Control" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EndTurnBtn" type="Button" parent="HBox"]
layout_mode = 2
text = "End Turn"

[node name="DeckLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = 56.0
text = "Next: — | Deck: —"

[node name="ResourcesPanel" type="Panel" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -248.0
offset_top = -184.0
offset_right = -16.0
offset_bottom = -16.0
mouse_filter = 2

[node name="Content" type="MarginContainer" parent="ResourcesPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="Rows" type="VBoxContainer" parent="ResourcesPanel/Content"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="ResourcesPanel/Content/Rows"]
layout_mode = 2
text = "Resources"

[node name="NatureValue" type="Label" parent="ResourcesPanel/Content/Rows"]
layout_mode = 2
text = "Nature: 0/0"

[node name="EarthValue" type="Label" parent="ResourcesPanel/Content/Rows"]
layout_mode = 2
text = "Earth: 0/0"

[node name="WaterValue" type="Label" parent="ResourcesPanel/Content/Rows"]
layout_mode = 2
text = "Water: 0/0"

[node name="LifeValue" type="Label" parent="ResourcesPanel/Content/Rows"]
layout_mode = 2
text = "Life: 0"

[node name="SoulSeedsValue" type="Label" parent="ResourcesPanel/Content/Rows"]
layout_mode = 2
text = "Soul Seeds: 0"

[node name="ToastLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
